--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
             <button id="navl" onclick="location.href='index.html'">마인카트 홈페이지</button>
         </div>
         <div>
-            <button class="navm" onclick="location.href='download.html'">다운로드</button>
+            <button class="navm" onclick="location.href='addon_list.html'">다운로드</button>
             <button class="navm">설명서</button>
             <button class="navm"></button>
         </div>
