--- a/addon_list.html
+++ b/addon_list.html
@@ -101,7 +101,7 @@
             <button id="navl" onclick="location.href='index.html'">마인카트 홈페이지</button>
         </div>
         <div>
-            <button class="navm" onclick="location.href='download.html'">다운로드</button>
+            <button class="navm" onclick="location.href='addon_list.html'">다운로드</button>
             <button class="navm">설명서</button>
             <button class="navm">로그인</button>
         </div>
@@ -195,8 +195,7 @@
                     <div class="item_desc">
                         <div class="item_main">
                             <h1>엔티티 컨트롤러</h1>
-                            <h2>엔티티를 블록방향에 맞춰 회전시키고 없앨수 있는 애드온 입니다.<br>
-                                예전에 있던 엔티티 에디터의 대체애드온 입니다.<br>
+                            <h2>엔티티를 블록방향에 맞춰 회전시키거나 없앨수 있는 애드온 입니다.<br>
                                 이 애드온는 마인카트가 제작하였으며 허가된 사람 외에는 배포 할 수 없습니다.</h2>
                         </div>
                         <div class="item_meta">
