--- a/addon_list.html
+++ b/addon_list.html
@@ -5,11 +5,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:title" content="마인카트 홈페이지 minecart homepage">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="resource\ui\web_banner.png">
+    <meta property="og:description" content="열차와 관련된 마인크래프트 애드온을 다운받고,사용방법을 알아보고,플레이 하세요!">
+    <link rel="shortcut icon" href="resource/ui/favicon.png" type="image/x-icon">
     <title>마인카트 홈페이지 minecart homepage</title>
+
     <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" href="addon_list.css">
     <script src="addon_list.js" async></script>
-    <link rel="shortcut icon" href="resource/ui/favicon.png" type="image/x-icon">
+
     <style>
         #custom_ad {
             position: fixed;
@@ -200,7 +206,7 @@
                         </div>
                         <div class="item_meta">
                             <div>
-                                <h3>버전:v1.1.0</h3>
+                                <h3>버전:v3.0.2</h3>
 
 
                                 <h3>제작자:마인카트</h3>
