--- a/index.html
+++ b/index.html
@@ -6,16 +6,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="Keywords"
-        content="마인카트, 마인카트 홈페이지, 마카 사이트, minecart homepage, minecart1019, 마크 지하철, 마크 기차, minecraft train, minecraft train addon" />
-    <meta name="description" content="마인크래프트BE 전용 열차및 다른 애드온을 다운 받고 플레이 하고 다양한 정보를 얻어보세요!">
+        content="마인카트, 마인카트 홈페이지, 마카 사이트, minecart homepage, minecart1019, 마크 지하철, 마크 기차, minecraft train, minecraft train addon, minecart, mtc addon, mca addon" />
+    <meta name="description" content="열차와 관련된 마인크래프트 애드온을 다운받고,사용방법을 알아보고,플레이 하세요!">
+    <meta property="og:title" content="마인카트 홈페이지 minecart homepage">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="resource\ui\web_banner.png">
+    <meta property="og:description" content="열차와 관련된 마인크래프트 애드온을 다운받고,사용방법을 알아보고,플레이 하세요!">
+    <meta name="google-site-verification" content="Xh3ls7oV2Qz2YF9so-7rtf5XBOqhPLzpVA2BFUaFDSk" />
     <title>마인카트 홈페이지 minecart homepage</title>
+
     <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" href="index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="shortcut icon" href="resource/ui/favicon.png" type="image/x-icon">
-    <meta name="google-site-verification" content="Xh3ls7oV2Qz2YF9so-7rtf5XBOqhPLzpVA2BFUaFDSk" />
 
     <style>
         .snowflake {
