--- a/addon_download.html
+++ b/addon_download.html
@@ -5,8 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>모드별 상세정보</title>
+    <meta property="og:title" content="마인카트 홈페이지 minecart homepage">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="resource\ui\web_banner.png">
+    <meta property="og:description" content="열차와 관련된 마인크래프트 애드온을 다운받고,사용방법을 알아보고,플레이 하세요!">
     <link rel="shortcut icon" href="resource/ui/favicon.png" type="image/x-icon">
+    <title>모드별 상세정보</title>
+
     <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" href="addon_download.css">
 </head>
