--- a/addon_list.html
+++ b/addon_list.html
@@ -212,7 +212,7 @@
                                 <h3>제작자:마인카트</h3>
                             </div>
 
-                            <a href="addon_download?name=entc"><button>다운로드</button></a>
+                            <a href="addon_download.html?name=entc"><button>다운로드</button></a>
 
                         </div>
                     </div>
@@ -250,7 +250,7 @@
                             </div>
 
                             <!-- <button onclick="needcode('fpp23y1k2emlkp', '104 116 116 112 115 58 47 47 100 114 105 118 101 46 103 111 111 103 108 101 46 99 111 109 47 102 105 108 101 47 100 47 49 105 82 53 49 71 95 115 73 99 69 81 117 83 116 112 101 105 81 97 65 65 48 118 85 85 56 95 89 51 115 99 75 47 118 105 101 119 63 117 115 112 61 115 104 97 114 105 110 103', true)">다운로드</button> -->
-                            <a href="addon_download?name=n1tc"><button>다운로드</button></a>
+                            <a href="addon_download.html?name=n1tc"><button>다운로드</button></a>
 
 
                         </div>
@@ -275,7 +275,7 @@
                                 <h3>제작자:마인카트</h3>
 
                             </div>
-                            <a href="addon_download?name=mtt"><button>다운로드</button></a>
+                            <a href="addon_download.html?name=mtt"><button>다운로드</button></a>
 
                         </div>
                     </div>
@@ -300,7 +300,7 @@
                             </div>
 
                             <!-- <button onclick="needcode('fpp23y1k2emlkp', '104 116 116 112 115 58 47 47 100 114 105 118 101 46 103 111 111 103 108 101 46 99 111 109 47 102 105 108 101 47 100 47 49 105 82 53 49 71 95 115 73 99 69 81 117 83 116 112 101 105 81 97 65 65 48 118 85 85 56 95 89 51 115 99 75 47 118 105 101 119 63 117 115 112 61 115 104 97 114 105 110 103', true)">다운로드</button> -->
-                            <a href="addon_download?name=n1ca"><button>다운로드</button></a>
+                            <a href="addon_download.html?name=n1ca"><button>다운로드</button></a>
 
 
                         </div>
@@ -326,7 +326,7 @@
                             </div>
 
                             <!-- <button href="/files/1호선 큐브5량(2.0.3).mcaddon" download onclick="//needcode('fpp23y1m0d06Bc', '104 116 116 112 115 58 47 47 100 114 105 118 101 46 103 111 111 103 108 101 46 99 111 109 47 102 105 108 101 47 100 47 49 101 111 99 45 73 80 118 77 49 100 51 122 45 51 50 71 109 114 112 89 65 49 82 50 56 49 119 72 73 51 97 67 47 118 105 101 119 63 117 115 112 61 115 104 97 114 105 110 103', true)">다운로드</a> -->
-                            <a href="addon_download?name=c1ca"><button>다운로드</button></a>
+                            <a href="addon_download.html?name=c1ca"><button>다운로드</button></a>
                         </div>
                     </div>
                 </div>
@@ -384,7 +384,7 @@
                                 <h3>제작자:마인카트</h3>
 
                             </div>
-                            <a href="addon_download?name=tcak"><button>다운로드</button></a>
+                            <a href="addon_download.html?name=tcak"><button>다운로드</button></a>
                         </div>
                     </div>
                 </div>
