--- a/addon_download.html
+++ b/addon_download.html
@@ -34,7 +34,7 @@
             <button id="navl" onclick="location.href='index.html'">마인카트 홈페이지</button>
         </div>
         <div>
-            <button class="navm" onclick="location.href='download.html'">다운로드</button>
+            <button class="navm" onclick="location.href='ADDON_LIST.HTML'">다운로드</button>
             <button class="navm">설명서</button>
             <button class="navm">로그인</button>
         </div>
@@ -47,7 +47,7 @@
         <div id="image_viewer">
             <img id="img"
                 src="https://www.minecraft.net/content/dam/games/minecraft/key-art/cow-header.jpg.transform/minecraft-image-large/image.jpg"
-                alt="">
+                alt="이미지가 로드되지 않았습니다.">
         </div>
         <h1 id="title">모드 이름</h1>
 
